--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,14 @@
 /*============== MEDIA QUERY  ===============*/
 
 @media (max-width: 575px) {
+  .category_hidden {
+    display: none;
+  }
+
+  /* .search_input {
+    width: 90% !important;
+    margin: 0 auto;
+  } */
   .bnr_btn_strat,
   .bnr_btn_join {
     padding: 10px 20px;
@@ -278,14 +286,6 @@
   .logo_position {
     justify-content: center;
   }
-
-  .pages_sm_top_bottom_space {
-    margin: 15px 0;
-  }
-
-  /* .banner_text_parent {
-    height: 700px;
-  } */
 
   .banner_heading_text {
     font-size: 40px;
