--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,24 @@
-/* body {
-    overflow-x: hidden;
-} */
+body{
+  position: relative;
+}
+
+.menu_div_hidden{
+  background-color: #ffffff;
+  padding: 20px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 111;
+  height: 100vh;
+  width: 350px;
+  overflow-y: auto;
+  transform: translateX(-100%);
+  transition: transform 0.4s ease;
+}
+
+.menu_div_hidden.active {
+  transform: translateX(0);
+}
 
 .search_box {
   margin-left: -20px;
@@ -90,6 +108,19 @@
    background-color: black;
    color: #fff !important;
 } 
+
+/* section animation */
+.section_animation {
+  opacity: 0;
+  transform: translateY(100px);
+  transition: all 0.6s ease-out;
+}
+
+.section_animation.animate {
+  opacity: 1;
+  transform: translateY(0);
+}
+
 
 .card {
   border: none;
