--- a/css/style.css
+++ b/css/style.css
@@ -278,6 +278,11 @@ body{
   line-height: 30px;
 } 
 
+.cart-img {
+  height: 100px;
+  width: 100px;
+}
+
 
 
 /*============== MEDIA QUERY  ===============*/
@@ -331,6 +336,11 @@ h2 {
 
 .swiper-slide h4 {
   font-size: 15px !important;
+}
+
+.cart-img {
+  height: 60px;
+  width: 60px;
 }
 }
 
