--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body{
   position: relative;
+  background-color: #f5f4f4;
 }
 
 .menu_div_hidden{
@@ -339,8 +340,21 @@ h2 {
 }
 
 .cart-img {
-  height: 60px;
-  width: 60px;
+  height: 50px;
+  width: 50px;
+}
+
+.mt_sm{
+  margin-top: 10px;
+}
+
+.product_small_text {
+  font-size: 10px;
+  line-height: 0.2px !important;
+}
+
+.cart_product_title {
+  font-size: 13px;
 }
 }
 
