--- a/css/style.css
+++ b/css/style.css
@@ -297,6 +297,11 @@ body{
   border: 1px solid rgb(171, 169, 169);
 }
 
+.review_img_size {
+  width: 120px;
+  height: 120px;
+}
+
 
 
 /*============== MEDIA QUERY  ===============*/
