--- a/css/style.css
+++ b/css/style.css
@@ -391,6 +391,11 @@ h2 {
 .delivery_phn_width {
   width: 85% !important;
 }
+
+/* .form-control:focus {
+    box-shadow: none;        
+    outline: none;
+  } */
 }
 
 @media (min-width: 576px) and (max-width: 768px) {
